feat(tsoa-swagger): Add additional get route to find a product using Id.
