# src/products/productsController.ts
@@ -1,6 +1,6 @@
-import { Controller, Get, Queries, Route } from 'tsoa';
+import { Controller, Get, Path, Queries, Route } from 'tsoa';
 import { ProductsService } from './productsService';
-import { ProductListResponse } from './productsTypes';
+import { ProductDto, ProductListResponse } from './productsTypes';
 
 export interface QueryParams {
   page: string;
@@ -14,5 +14,12 @@ export class ProductsController extends Controller {
     @Queries() queryParams: QueryParams
   ): Promise<ProductListResponse | Error> {
     return new ProductsService().getAllProducts(queryParams);
+  }
+
+  @Get('{productId}')
+  public async getByProductId(
+    @Path() productId: string
+  ): Promise<ProductDto | Error> {
+    return new ProductsService().getByProductId(productId);
   }
 }
